prodMetadata/src/objects/IAVAEvent_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Feedback__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Is there any additional feedback you wish to give?</description>
        <inlineHelpText>Additional feedback from Attendee</inlineHelpText>
        <label>Additional Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <label>Attended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>if ( and(
       OR(isblank( Contact__r.FirstName ), Contact__r.FirstName == &apos;Unknown&apos;, Contact__r.FirstName == &apos;(Unknown)&apos;)
       , OR(Contact__r.LastName == &apos;Unknown&apos;, Contact__r.LastName == &apos;(Unknown)&apos;)
       , not(isblank(Contact__r.Email))
      )
      , Contact__r.Email
      , Contact__r.LastName + if (isblank(Contact__r.FirstName), &apos;&apos;, &apos;, &apos; + Contact__r.FirstName)
    )</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <formula>Event__r.Brief_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brief Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_to_Community_Veterans__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Attendee&apos;s connection to community veterans</description>
        <inlineHelpText>Attendee&apos;s connection to community veterans</inlineHelpText>
        <label>Connection to Community Veterans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I don&apos;t know of any veterans near me</fullName>
                </value>
                <value>
                    <fullName>I know a couple of veterans in my area</fullName>
                </value>
                <value>
                    <fullName>I know lots of fellow veterans and supporters in my area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactId_18__c</fullName>
        <formula>CASESAFEID(Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId_18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Existed_Before_Event__c</fullName>
        <formula>IF(DATEVALUE(Contact__r.CreatedDate) &lt; DATEVALUE(CreatedDate), true, false)</formula>
        <label>Contact Existed Before Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Attendees</relationshipLabel>
        <relationshipName>Event_Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Did_you_grow_your_own_network__c</fullName>
        <description>Field for the Event Attendee Post Event survey: 1=I did not meet anybody new and 5=I met great new people that I expect to see again.</description>
        <inlineHelpText>1= I did not meet anybody new; 5= I met great new people that I expect to see again.</inlineHelpText>
        <label>Did you grow your own network?</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Attendee_s_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Attendee&apos;s First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_CityStateZip__c</fullName>
        <formula>Event__r.Location_City__c 
  + if(or(isblank(Event__r.Location_City__c), isblank(Event__r.Location_State__c)), &quot;&quot;, &quot;, &quot;) 
  + Event__r.Location_State__c
  + &quot; &quot; + Event__r.Location_Zip_Code__c</formula>
        <label>Event CityStateZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <formula>Event__r.Event_Date__c</formula>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <formula>Event__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Ideas__c</fullName>
        <description>Attendee&apos;s Idea for future event</description>
        <inlineHelpText>Attendee&apos;s Idea for future event</inlineHelpText>
        <label>Event Ideas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Event__r.Name</formula>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Prompted_Portal_Use__c</fullName>
        <formula>IF(OR(DATEVALUE(Contact__r.Accepted_TOS_Date__c) &gt;= DATEVALUE(CreatedDate), Contact__r.Portal_User__r.Date_of_first_COV_login__c &gt;= DATEVALUE(CreatedDate)),true,false)</formula>
        <label>Event Prompted Portal Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Rating__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Attendee&apos;s event rating; 1 is lowest and 5 is highest</description>
        <inlineHelpText>Attendee&apos;s event rating; 1 is lowest and 5 is highest</inlineHelpText>
        <label>Event Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Status from the Event record</description>
        <formula>text(Event__r.Status__c)</formula>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Street_Address__c</fullName>
        <formula>Event__r.Location_Street_Address__c</formula>
        <label>Event Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Times__c</fullName>
        <formula>if(not(isblank( Event__r.Start_Time__c )), 
  Event__r.Start_Time__c + if(not(isblank( Event__r.End_Time__c )), &quot; - &quot; + Event__r.End_Time__c, &quot;&quot;)
  , &quot;&quot;)</formula>
        <label>Event Times</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>TEXT(Event__r.Type__c)</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <formula>Event__r.Location_Venue__c</formula>
        <label>Event Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Year__c</fullName>
        <label>Event Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Year_formula__c</fullName>
        <formula>YEAR(Event__r.Event_Date__c)</formula>
        <label>Event Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>IAVAEvent__c</referenceTo>
        <relationshipLabel>Event Attendees</relationshipLabel>
        <relationshipName>Event_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Guest_of__c</fullName>
        <formula>if(isblank(Parent_Attendee__c), null, HYPERLINK(Parent_Attendee__r.Contact__c, Parent_Attendee__r.Contact__r.FirstName &amp; &apos; &apos; &amp;  Parent_Attendee__r.Contact__r.LastName, &apos;_self&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guest of</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_this_Event__c</fullName>
        <description>Field for the Event Attendee Post Event survey: How attendee learned about the event</description>
        <inlineHelpText>How attendee learned about the event</inlineHelpText>
        <label>How did you hear about this Event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_in_Hosting__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Attendee&apos;s interest in Hosting future event</description>
        <inlineHelpText>Attendee&apos;s interest in Hosting future event</inlineHelpText>
        <label>Interest in Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Future_Events__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Attendee is interested in future events</description>
        <inlineHelpText>Attendee is interested in future events</inlineHelpText>
        <label>Interested in Future Events</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inviter_History__c</fullName>
        <description>In case of multiple inviters for a single attendee, the history is tracked in this field (via workflow) and in some cases also via a relationship.</description>
        <inlineHelpText>In case of multiple inviters for a single attendee, the history is tracked in this field (via workflow) and in some cases also via a relationship.</inlineHelpText>
        <label>Inviter History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inviter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who invited the attendee to the event (if multiple invitations this is the most recent inviter and multiple names are stored in the Inviter History field and with relationships).</description>
        <inlineHelpText>The person who invited the attendee to the event (if multiple invitations this is the most recent inviter and multiple names are stored in the Inviter History field and with relationships).</inlineHelpText>
        <label>Inviter (most recent)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Invitations Sent</relationshipLabel>
        <relationshipName>Event_Attendees_Invited</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Met_Someone_New__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Checked if attendee met someone new</description>
        <inlineHelpText>Checked if attendee met someone new</inlineHelpText>
        <label>Met Someone New</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_attendee_of_changed_event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this will send the event attendee a notification email about the change (or cancellation) of the event. It will then un-set itself so it can be used again for a future change.</description>
        <inlineHelpText>When checked this will send the event attendee a notification email about the change (or cancellation) of the event. It will then un-set itself so it can be used again for a future change.</inlineHelpText>
        <label>Notify attendee of changed event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_attendee_of_invitation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets checked when a new invitation is created, and then workflow sends the notification and unchecks this field again for future use.</description>
        <inlineHelpText>Gets checked when a new invitation is created, and then workflow sends the notification and unchecks this field again for future use.</inlineHelpText>
        <label>Notify attendee of invitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Attendee_Id__c</fullName>
        <formula>Parent_Attendee__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Attendee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attendee records for guests have the &quot;parent&quot; attendee record filled in here.</description>
        <inlineHelpText>Attendee records for guests have the &quot;parent&quot; attendee record filled in here.</inlineHelpText>
        <label>Parent Attendee (for guests)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IAVAEvent_Attendee__c</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>GuestAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_of_Interactions__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Quality of event interactions</description>
        <inlineHelpText>Quality of event interactions</inlineHelpText>
        <label>Quality of Interactions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RRRP_Info_Received__c</fullName>
        <description>Field for the Event Attendee Post Event survey: If checked, attendee received RRRP info</description>
        <inlineHelpText>If checked, attendee received RRRP info</inlineHelpText>
        <label>RRRP Info Received</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Not_Attending__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Reason for not attending</description>
        <inlineHelpText>Reason for not attending an event</inlineHelpText>
        <label>Reason for Not Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I attended a different VetTogether.</fullName>
                </value>
                <value>
                    <fullName>I changed my mind after RSVPing.</fullName>
                </value>
                <value>
                    <fullName>I forgot.</fullName>
                </value>
                <value>
                    <fullName>I had a conflict.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_RSVP__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Attendee&apos;s reason for RSVPing</description>
        <inlineHelpText>Attendee&apos;s reason for RSVPing</inlineHelpText>
        <label>Reason for RSVP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Learn more about IAVA or other organizations</fullName>
                </value>
                <value>
                    <fullName>Meet other Veterans</fullName>
                </value>
                <value>
                    <fullName>Tag along with a friend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_Status__c</fullName>
        <label>Reply Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resend_Attendee_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Attendee Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Searchable_Name__c</fullName>
        <description>Just used for the Typehead component to be able to search the name</description>
        <label>Searchable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_Attended__c</fullName>
        <description>Field for the Event Attendee Post Event survey: Attendance reported by event attendee</description>
        <inlineHelpText>Attendance reported by event attendee</inlineHelpText>
        <label>Self Reported Attended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppress_Attendee_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Attendee Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_do_you_need_from_IAVA_to_Host__c</fullName>
        <description>Relates to survey question: What you need from IAVA to Guide you?</description>
        <inlineHelpText>Relates to survey question: What you need from IAVA to Guide you?</inlineHelpText>
        <label>What do you need from IAVA to Host?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A call with IAVA staff</fullName>
                </value>
                <value>
                    <fullName>A hosting partner</fullName>
                </value>
                <value>
                    <fullName>An intro video to play about IAVA</fullName>
                </value>
                <value>
                    <fullName>Call with a member who&apos;s hosted</fullName>
                </value>
                <value>
                    <fullName>How-to guides or tools</fullName>
                </value>
                <value>
                    <fullName>Network of businesses to plug into</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>change_tracking_for_email__c</fullName>
        <label>change tracking for email</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>myIAVA_Information_Received__c</fullName>
        <description>Field for the Event Attendee Post Event survey: If checked, attendee received myIAVA info</description>
        <inlineHelpText>If checked, attendee received myIAVA info</inlineHelpText>
        <label>myIAVA Information Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Attendee</label>
    <nameField>
        <displayFormat>Atnd-{000000}</displayFormat>
        <label>Event Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Blocked_check</fullName>
        <active>true</active>
        <description>Checks whether the contact&apos;s Rucksack Status is blocked</description>
        <errorConditionFormula>ISPICKVAL(Contact__r.Rucksack_Status__c, &quot;Blocked&quot;)</errorConditionFormula>
        <errorMessage>Sorry, your request was not accepted. Please contact membership@iava.org if you have questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Reply_Cap_Check</fullName>
        <active>true</active>
        <description>If the event has a &quot;Reply Cap&quot;, and the amount of Yes replies matches the cap, do not allow more Replies.</description>
        <errorConditionFormula>AND(
 ispickval(Reply_Status__c, &apos;Yes&apos;),
 Event__r.Reply_Cap__c &gt; 0,
 not(ISPICKVAL(PRIORVALUE(Reply_Status__c), &apos;Yes&apos;)),
 Event__r.Num_Replies_Remaining__c &lt; 1
)</errorConditionFormula>
        <errorDisplayField>Attended__c</errorDisplayField>
        <errorMessage>Sorry, there are no more spots available at this event.</errorMessage>
    </validationRules>
</CustomObject>